   and Nicolás Ojeda Bär)

- #11880: Restore the correct sigmask in systhreads.
  (Christiano Haesbaert, review by Guillaume Munch-Maccagnoni and
   Sébastien Hinderer)

- #11881: Fix thread-unsafety of registration of operations for "custom"
   values.
  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and KC
   Sivaramakrishnan)

- #11474, #11998: Add support for user-defined events in the runtime event
  tracing system. (Lucas Pluvinage, review by Sadiq Jaffer)

- #11693: Remove use of C99 Variable Length Arrays (VLAs) in the runtime.
  (David Allsopp, review by Xavier Leroy, Guillaume Munch-Maccagnoni,
   Stefan Muenzel and Gabriel Scherer)

- #11827: Restore prefetching for GC marking
  (Fabrice Buoro and Stephen Dolan, review by Gabriel Scherer and Sadiq Jaffer)

- #11935: Load frametables of dynlink'd modules in batch
  (Stephen Dolan, review by David Allsopp and Guillaume Munch-Maccagnoni)

- #11980: fix quadratic behavior in natdynlink by using a STW section
  for frame-descriptor updates.
  (Gabriel Scherer, review by Sadiq Jaffer, report by André Maroneze
  for Frama-C and Guillaume Melquiond for Coq)

### Type system:

- #6941, #11187: prohibit using classes through recursive modules
  inheriting or including a class belonging to a mutually-recursive module
  would previous behave incorrectly, and now results in a clean error.
  (Leo White, review by Gabriel Scherer and Florian Angeletti)

- #11912: Refactoring handling of scoped type variables
  (Richard Eisenberg, review by Gabriel Scherer and Florian Angeletti)

### Code generation and optimizations:

- #11967: Remove traces of Obj.truncate, which allows some mutable
  loads to become immutable.
  (Nick Barnes, review by Vincent Laviron and KC Sivaramakrishnan)

- #9945, #10883: Turn boolean-result float comparisons into primitive operations
  Uses the architecture's elementary operations for float comparisons,
  when available, rather than branching and then setting the return value.