@@ -235,6 +235,7 @@ caml_runtime_events_create_cursor(const char_os* runtime_events_path, int pid,
   cursor->lost_events = NULL;
   cursor->user_unit = NULL;
   cursor->user_int = NULL;
+  cursor->user_span = NULL;
   cursor->user_custom = NULL;
 
   *cursor_res = cursor;
@@ -618,13 +619,11 @@ static int ml_runtime_begin(int domain_id, void *callback_data,
     if( Is_exception_result(res) ) {
       res = Extract_exception(res);
       *holder->exception = res;
-      CAMLdrop;
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_runtime_end(int domain_id, void *callback_data,
@@ -646,13 +645,11 @@ static int ml_runtime_end(int domain_id, void *callback_data,
     if( Is_exception_result(res) ) {
       res = Extract_exception(res);
       *holder->exception = res;
-      CAMLdrop;
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_runtime_counter(int domain_id, void *callback_data,
@@ -677,13 +674,11 @@ static int ml_runtime_counter(int domain_id, void *callback_data,
     if( Is_exception_result(res) ) {
       res = Extract_exception(res);
       *holder->exception = res;
-      CAMLdrop;
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_alloc(int domain_id, void *callback_data, uint64_t timestamp,
@@ -711,13 +706,11 @@ static int ml_alloc(int domain_id, void *callback_data, uint64_t timestamp,
     if( Is_exception_result(res) ) {
       res = Extract_exception(res);
       *holder->exception = res;
-      CAMLdrop;
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_lifecycle(int domain_id, void *callback_data, int64_t timestamp,
@@ -746,13 +739,11 @@ static int ml_lifecycle(int domain_id, void *callback_data, int64_t timestamp,
     if( Is_exception_result(res) ) {
       res = Extract_exception(res);
       *holder->exception = res;
-      CAMLdrop;
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_lost_events(int domain_id, void *callback_data, int lost_words) {
@@ -771,13 +762,11 @@ static int ml_lost_events(int domain_id, void *callback_data, int lost_words) {
     if( Is_exception_result(res) ) {
       res = Extract_exception(res);
       *holder->exception = res;
-      CAMLdrop;
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 
@@ -829,21 +818,19 @@ static int user_events_call_callback_list(
 
   while (Is_block(callback_list)) {
       // two indirections as callback is a list item wrapped in a gadt
-    value callback = Field(Field(callback_list, 0), 0);
+    callback = Field(Field(callback_list, 0), 0);
     res = caml_callbackN_exn(callback, 4, params);
 
     if( Is_exception_result(res) ) {
       res = Extract_exception(res);
       *holder->exception = res;
-      CAMLdrop;
-      return 0;
+      CAMLreturnT(int, 0);
     }
 
     callback_list = Field(callback_list, 1);
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static value caml_runtime_events_user_resolve_cached(
@@ -895,13 +882,10 @@ static value caml_runtime_events_user_resolve_cached(
 
     // copy values from the cache to the new array
     for (uintnat i = 0; i < len; i++) {
-      Field(cache_resized, i) = Field(cache, i);
+      caml_initialize(&Field(cache_resized, i), Field(cache, i));
     }
 
-    // write None for the rest of the values
-    for (uintnat i = len; i < new_len; i++) {
-      Field(cache_resized, i) = Val_none;
-    }
+    // the rest of the values is None
 
     // update the wrapper structure
     Store_field(wrapper_root, 2, cache_resized);
@@ -943,12 +927,11 @@ static int ml_user_unit(int domain_id, void *callback_data, int64_t timestamp,
 
     // payload is prepared, we call the callbacks sequentially.
     if (user_events_call_callback_list(holder, callback_list, params) == 0) {
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_user_span(int domain_id, void *callback_data, int64_t timestamp,
@@ -982,12 +965,11 @@ static int ml_user_span(int domain_id, void *callback_data, int64_t timestamp,
 
     // payload is prepared, we call the callbacks sequentially.
     if (user_events_call_callback_list(holder, callback_list, params) == 0) {
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_user_int(int domain_id, void *callback_data,
@@ -1020,12 +1002,11 @@ static int ml_user_int(int domain_id, void *callback_data,
 
     // payload is prepared, we call the callbacks sequentially.
     if (user_events_call_callback_list(holder, callback_list, params) == 0) {
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static int ml_user_custom(int domain_id, void *callback_data, int64_t timestamp,
@@ -1036,6 +1017,7 @@ static int ml_user_custom(int domain_id, void *callback_data, int64_t timestamp,
   CAMLlocal4(callback_list, event, callbacks_root, event_type);
   CAMLlocalN(params, 4);
   CAMLlocal2(wrapper_root, read_buffer);
+  CAMLlocal3(data, record, deserializer);
 
   struct callbacks_exception_holder* holder = callback_data;
   callbacks_root = *holder->callbacks_val;
@@ -1060,7 +1042,6 @@ static int ml_user_custom(int domain_id, void *callback_data, int64_t timestamp,
   if (Is_block(callback_list)) {
     // at least one callback is listening for this event type, so we
     // deserialize the value and prepare the callback payload
-    CAMLlocal3(data, record, deserializer);
 
     const char* data_str = (const char*) event_data;
     uintnat string_len = event_data_len * sizeof(uint64_t) - 1;
@@ -1091,12 +1072,11 @@ static int ml_user_custom(int domain_id, void *callback_data, int64_t timestamp,
 
     // payload is prepared, we call the callbacks sequentially.
     if (user_events_call_callback_list(holder, callback_list, params) == 0) {
-      return 0;
+      CAMLreturnT(int, 0);
     }
   }
 
-  CAMLdrop;
-  return 1;
+  CAMLreturnT(int, 1);
 }
 
 static struct custom_operations cursor_operations = {
