@@ -82,8 +82,10 @@ Working version
   (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and KC
    Sivaramakrishnan)
 
-- #11474, #11998: Add support for user-defined events in the runtime event
-  tracing system. (Lucas Pluvinage, review by Sadiq Jaffer)
+- #11474, #11998, #12065: Add support for user-defined events in the runtime
+  event tracing system.
+  (Lucas Pluvinage, review by Sadiq Jaffer, Guillaume Munch-Maccagnoni,
+   Enguerrand Decorne, Gabriel Scherer and Anil Madhavapeddy)
 
 - #11693: Remove use of C99 Variable Length Arrays (VLAs) in the runtime.
   (David Allsopp, review by Xavier Leroy, Guillaume Munch-Maccagnoni,
